...
    var userTime by rememberSaveable { mutableStateOf("") }
    var userBattery by rememberSaveable { mutableStateOf("") }
    var isError by rememberSaveable { mutableStateOf(false) }
    var openDialog by rememberSaveable { mutableStateOf(false) }
    var start by rememberSaveable { mutableStateOf(true) }
    val context = LocalContext.current.applicationContext
    val menuItemList = listOf("Time type", "seconds", "minutes", "hours", "days")
    var selectedItem by rememberSaveable { mutableStateOf(menuItemList[0]) }
    var expanded by rememberSaveable { mutableStateOf(false) }

    ScaffoldTimeAndBatterySettingsScreen(
        navController = navController,
        coroutineScope = coroutineScope,
...
                            .weight(1f),
                        value = userTime,
                        onValueChange = { time ->
                            userTime = time
                        },
                        label = {
                            Text(text = "Input the time")
                        },
                        singleLine = true,
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number)
                    )

                    ExposedDropdownMenuBox(
...
                            .weight(9f),
                        value = userBattery,
                        onValueChange = { battery ->
                            userBattery = battery
                        },
                        label = {
                            Text(text = "Input the appropriate %")
                                },
                        singleLine = true,
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number)
                    )

                    Icon(
...
                    ) {
                        Text(text = stringResource(id = R.string.save_button))
                        if(isError && openDialog){
                            AlertDialog(
                                onDismissRequest = { },
                                title = {
                                    Text(text = "Error")
                                },
                                text = {
                                    Text(text = "All the fields have to be filled\n" +
                                            "The battery has to be between 5 - 100\n" +
                                            "The time can't be negative\n" +
                                            "The type has to be either mins, hrs or days")
                                },
                                confirmButton = {
                                    TextButton(onClick = { openDialog = false }) {
                                        Text(text = "Close")
                                    }
                                },
                                icon = {
                                    Icon(
                                        imageVector = Icons.Default.Error,
                                        contentDescription = stringResource(id = R.string.error_icon)
...
