...
        ) {
            Row(
                modifier = Modifier
                    .padding(start = 20.dp, end = 20.dp, top = 60.dp)
            ) {
                Text(
                    text = "Press the icon to access the contacts",
                    modifier = Modifier.weight(9f),
                    color = MaterialTheme.colorScheme.primary,
                    fontSize = 20.sp,
                    textAlign = TextAlign.Start,
                    fontWeight = FontWeight.Bold
                )
...
                    },
                    placeholder = {
                        Text(text = "This is where the contact name will be shown")
                    },
                    readOnly = false,
                    label = {
                        Text(text = "Contact Name")
                    },
                    modifier = Modifier.weight(1f)
                )
            }

            Spacer(modifier = Modifier.height(15.dp))
...
                    },
                    readOnly = true,
                    placeholder = {
                        Text(text = "This is where the contact number will be shown")
                    },
                    label = {
                        Text(text = "Contact Number")
                    },
                    modifier = Modifier.weight(1f)
                )
            }

            Spacer(modifier = Modifier.height(25.dp))
...
