...
        val lastMessage = contactMethodSettingsList[contactMethodSettingsList.lastIndex].message
        var lastMessageDB by rememberSaveable { mutableStateOf(lastMessage) }
        val focusManager = LocalFocusManager.current
        val context = LocalContext.current.applicationContext
        var isError by rememberSaveable { mutableStateOf(false) }
        var openDialog by rememberSaveable { mutableStateOf(false) }
        val menuItemList = listOf("Select an option", "Calling", "SMS message", "Calling & SMS")
        var selectedItem by rememberSaveable { mutableStateOf(menuItemList[0]) }
        var expanded by rememberSaveable { mutableStateOf(false) }

        ScaffoldContactMethodSettings(
            navController = navController,
            coroutineScope = coroutineScope,
...
                        OutlinedTextField(
                            value = lastMessageDB,
                            onValueChange = { message ->
                                lastMessageDB = message
                            },
                            label = {
                                Text(text = "Emergency Message")
                            }
                        )
                    }

                    Spacer(modifier = Modifier.padding(40.dp))

...
